# pharma-logistics-crewai

./: .env.example  .gitignore  ATOMIC_STEPS (2).md  FutureFeatures.md  README.md  TECH_SPECS.md  pyproject.toml  requirements.txt
notebooks/: pharma_logistics_crew.ipynb
src/pharma_logistics/: __init__.py  crew.py  main.py  models.py
src/pharma_logistics/config/: agents.yaml  tasks.yaml
src/pharma_logistics/data/: sample_products.json
tests/: __init__.py  test_config.py  test_models.py  test_setup.py
