[project]
name = "pharma-logistics-crew"
version = "1.0.0"
description = "Crew AI system for pharmaceutical logistics optimization"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
notebook = [
    "ipykernel>=6.0.0",
    "nbformat>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
